--- a/web/library.css
+++ b/web/library.css
@@ -23,6 +23,7 @@ body{
     font-size: x-large;
     font-weight: bolder;
     color: rgba(244,244,244,0.76);
+    cursor: pointer;
 }
 
 .logout{
@@ -49,7 +50,7 @@ body{
 }
 
 
-.library-content{
+.library-content, .book-showcase{
     background-color: rgb(236, 236, 236);
     width: 100vw;
     position: absolute;
@@ -62,11 +63,31 @@ body{
     text-align: center;
 }
 
+.book-showcase{
+    display: none;
+}
+
+.book-object{
+    width: 100%;
+    height: 100%;
+
+}
+
 .book{
     display: inline-block;
-    background-image: url("test.png");
-    background-size: 100%;
-    background-position: center;
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+    cursor: pointer;
+}
+
+.title-bar{
+    background-color: rgba(31,31,31,0.75);
+    height: 40px;
+}
+
+.title{
+    line-height: 40px;
 }
 
 .book-content{
@@ -119,7 +140,8 @@ body{
     font-family: "Arial Rounded MT Bold", sans-serif;
     font-weight: bold;
     font-size: larger;
-    color: rgba(32,32,32,0.94);
+    color: rgb(214, 214, 214);
+
 }
 
 .add-book-content{
@@ -133,6 +155,7 @@ body{
     box-shadow: 10px 10px 30px #2b2a2b;
     border-radius: 20px;
 }
+
 
 #title, #submit-btn, #description, #file-select, label{
     margin: 0px auto 20px;
