--- a/web/index.css
+++ b/web/index.css
@@ -20,9 +20,9 @@ body{
     border-radius: 25px;
 }
 
-#wrapper{
+#login-content, #signup-content{
     position: absolute;
-    left: 50%; top: 50%; /*move the object to the center of the parent object*/
+    left: 50%; top: 50%;
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -30,7 +30,11 @@ body{
     transform: translate(-50%, -50%);
 }
 
-#input-box{
+#signup-content{
+    display: none;
+}
+
+.input-box{
     background-color: #656565;
     padding: 20px;
     border-radius: 10px;
@@ -144,5 +148,10 @@ table{
     text-align: center;
     color: rgba(190, 72, 0, 0.88);
     font-family: Arial, sans-serif;
+}
 
+#signup-error{
+    margin-top: -10px;
+    width: 75%;
+    margin-left: 12%;
 }
