--- a/web/library.css
+++ b/web/library.css
@@ -83,11 +83,22 @@ body{
 
 .title-bar{
     background-color: rgba(31,31,31,0.75);
-    height: 40px;
+    height: 10%;
+    position: relative;
 }
 
 .title{
-    line-height: 40px;
+    font-family: "Arial Rounded MT Bold", sans-serif;
+    font-weight: bold;
+    font-size: larger;
+    text-align: center;
+    width: 100%;
+    line-height: 100%;
+    vertical-align: center;
+    color: rgb(214, 214, 214);
+    position: relative;
+    margin-top: 0px;
+    padding-top: 5px;
 }
 
 .book-content{
@@ -99,6 +110,14 @@ body{
     white-space: normal;
     max-width: 100%;
     max-height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.description-wrapper{
+    max-width: 100%;
+    max-height: 90%;
+    white-space: normal;
     overflow: auto;
 }
 
@@ -136,22 +155,14 @@ body{
     opacity: 0;
 }
 
-.title{
-    font-family: "Arial Rounded MT Bold", sans-serif;
-    font-weight: bold;
-    font-size: larger;
-    color: rgb(214, 214, 214);
-
-}
-
 .add-book-content{
     background-color: #4f4c50;
     position: fixed;
     display: none;
-    top: 25%;
+    top: 20%;
     left: 37.5%;
     width: 25vw;
-    height: 50vh;
+    height: 55vh;
     box-shadow: 10px 10px 30px #2b2a2b;
     border-radius: 20px;
 }
@@ -233,4 +244,23 @@ body{
     overflow: hidden;
     position: absolute;
     z-index: -1;
+}
+
+#upload-error{
+    margin: auto;
+    color: rgba(190, 72, 0, 0.88);
+    text-align: center;
+    font-family: Arial, sans-serif;
+}
+
+.delete{
+    opacity: 0;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    color: #1f1f1f;
+}
+
+.delete:hover{
+    color: #cb2010;
 }
