--- a/web/style/index.css
+++ b/web/style/index.css
@@ -36,7 +36,8 @@ body{
 
 .input-box{
     background-color: #656565;
-    padding: 20px;
+    margin-top: 30px;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 15px 15px 30px rgba(0,0,0,0.23) inset;
 
