--- a/web/style/library.css
+++ b/web/style/library.css
@@ -53,14 +53,20 @@ body{
 .library-content, .book-showcase{
     background-color: rgb(236, 236, 236);
     width: 100vw;
-    position: absolute;
-    top: 60px;
-    bottom: 0;
-    margin: 0px;
+    margin: auto;
     max-width:100%;
     max-height:100%;
     overflow: auto;
     text-align: center;
+}
+
+#library-wrapper{
+    background-color: rgb(236, 236, 236);
+    width: 100vw;
+    position: absolute;
+    top: 60px;
+    bottom: 0;
+    margin: 0px;
 }
 
 .book-showcase{
